fixes for code block clippy icons

--- a/themes/learn3/css-compiled/theme.css
+++ b/themes/learn3/css-compiled/theme.css
@@ -450,12 +450,20 @@ samp {
 
 code {
   border-radius: 2px;
-  padding: .2rem .5rem;
-  margin: 0 .2rem;
   white-space: nowrap;
   color: #5e5e5e;
   background: #fefaed;
-  border: 1px solid #fbf0cb; }
+  border: 1px solid #fbf0cb;
+  padding: 0px 2px; }
+
+code + .copy-to-clipboard {
+  border: 1px solid #fbf0cb;
+  margin-left: -1px;
+  border-left: 0 !important;
+  font-size: inherit !important;
+  vertical-align: middle;
+  height: 21px;
+  top: 0; }
 
 pre {
   padding: 1rem;
@@ -468,7 +476,9 @@ pre {
     color: #237794;
     background: inherit;
     white-space: inherit;
-    border: 0; }
+    border: 0;
+    padding: 0;
+    margin: 0; }
 
 hr {
   border-bottom: 4px solid #F0F2F4; }
